# Android-Demo

./: README.md
AEC_Demo/: Android.mk  AndroidManifest.xml
AEC_Demo/res/layout/: activity_camera.xml
AEC_Demo/res/values/: strings.xml
AS_NDK_Demo/app/: CMakeLists.txt  build.gradle
AS_NDK_Demo/app/src/androidTest/java/com/example/gjz/ndk_demo/: ExampleInstrumentedTest.java
AS_NDK_Demo/app/src/main/: AndroidManifest.xml
AS_NDK_Demo/app/src/main/cpp/: native-lib.c  native-lib.cpp
AS_NDK_Demo/app/src/main/java/com/example/gjz/ndk_demo/: MainActivity.java
AS_NDK_Demo/app/src/test/java/com/example/gjz/ndk_demo/: ExampleUnitTest.java
AudioRecord_Demo/: Android.mk  AndroidManifest.xml  README.md
AudioTrack_Demo/: Android.mk  AndroidManifest.xml  Reamd.txt  test_01.pcm
BinderCallBack/binder_c++/: Android.mk  client.cpp  server.cpp
BinderCallBack/binder_callback/: #client.cpp#  #server.cpp#  Android.mk  client.cpp  server.cpp
BinderCallBack/binder_java_call_c++/: ReadMe.txt
BinderDemo/FrameworkBinderDemo/: README.md
BinderDemo/NativeBinderDemo/: Android.mk  ClientDemo.cpp  IMyService.cpp  IMyService.h  README.md  ServerDemo.cpp
TestPermission_demo/: settings.gradle
TestPermission_demo/app/: build.gradle
TouchLatency/: Android.mk  README.md
app_process_exec_java_demo/: Android.mk  HelloWorld  HelloWorld.java
audiorecord-bin/: Android.mk  AudioRecordTest.cpp  README.md  pcm2wav.cpp
hidl_server_client_demo/: HIDL_demo步骤.txt
setProptyReflect/: Android.mk  AndroidManifest.xml
simple_demo/: Android.mk  AndroidManifest.xml
(+66 files in other folders)
